--- a/package.json
+++ b/package.json
@@ -1,58 +1,33 @@
 {
-  "name": "Pfadi-Lieder-Kiosk",
-  "version": "1.0.1",
+  "name": "pfadi-lieder-kiosk",
+  "version": "2.0.0",
   "author": "Jan Litzenburger",
-  "license": "none",
+  "license": "MIT",
   "description": "A webapp that provides song texts for scout groups.",
   "private": true,
   "main": "dist/server/server.js",
-  "engines": {
-    "node": "8.4.*"
-  },
-  "scripts": {
-    "start": "grunt greenboot"
-  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.2",
-    "fs": "0.0.1-security",
-    "grunt": "^1.0.2",
-    "grunt-cli": "^1.2.0",
-    "grunt-tsc": "^1.0.12",
-    "serialport": "^6.1.1",
-    "thermalprinter": "^0.3.8",
-    "ts-node": "^5.0.0",
-    "tslint-microsoft-contrib": "^5.0.3",
-    "typescript": "^2.7.2",
-    "typings": "^2.1.1",
-    "v8flags": "^3.0.2",
+    "express": "^4.17.1",
     "webcap": "^0.18.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.23"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c --sourcemap=inline",
+    "dev:watch": "npm run dev -- --watch"
   },
   "devDependencies": {
-    "@types/jasmine": "2.6.0",
-    "@types/node": "^9.4.6",
-    "chai": "4.1.2",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-uglify": "^3.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-copy": "^0.1.0",
-    "grunt-jasmine-nodejs": "^1.6.0",
-    "grunt-mocha-test": "^0.13.3",
-    "grunt-newer": "^1.3.0",
-    "grunt-nodemon": "^0.4.2",
-    "grunt-shell": "^2.1.0",
-    "grunt-ts": "^6.0.0-beta.17",
-    "grunt-tslint": "^5.0.1",
-    "load-grunt-tasks": "^3.5.2",
-    "mocha": "^5.0.1",
-    "nodemon": "1.11.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "sleep": "^5.1.1",
-    "tslint": "^5.9.1"
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/magicmirror-module": "^2.16.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript-prettier": "^4.2.0",
+    "prettier": "^2.3.2",
+    "rollup": "^2.56.3",
+    "rollup-plugin-banner2": "^1.2.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.4.2"
   }
 }
